--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">FragmentSlider</string>
     <string name="create_new_notification">Create new notification</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
